--- a/Kiba/View/Finder/KBAAppointmentContr.xib
+++ b/Kiba/View/Finder/KBAAppointmentContr.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -53,6 +53,7 @@
                     <date key="date" timeIntervalSinceReferenceDate="411565612.828605">
                         <!--2014-01-16 11:46:52 +0000-->
                     </date>
+                    <locale key="locale" localeIdentifier="de_DE"/>
                     <timeZone key="timeZone" name="America/Los_Angeles">
                         <data key="data">
 VFppZgAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAAAAAC5AAAABAAAABCepkign7sVkKCGKqChmveQ
